# ProtoScribe

./: .env.example  .gitignore  CONTRIBUTING.md  IMPLEMENTATION_STATUS.md  LICENSE  README.md  mkdocs.yml  pyproject.toml  run.py  start_backend.py
.github/workflows/: docs.yml
docs/: README.md  index.md
docs/about/: license.md
docs/api-reference/: overview.md  protocols.md
docs/contributing/: development-setup.md
docs/developer-guide/: architecture.md  backend-api.md  database.md  frontend.md  llm-integration.md
docs/getting-started/: configuration.md  installation.md  quick-start.md
docs/user-guide/: ai-analysis.md  export-reports.md  interactive-editor.md  overview.md  protocol-upload.md
frontend/: package-lock.json  package.json
frontend/app/: layout.tsx  page.tsx
frontend/app/editor/: page.tsx
frontend/components/ui/: button.tsx
guidelines/: consort.json  spirit.json
scripts/: run_tests.py  setup_dev.py
src/protoscribe/: __init__.py  main.py
src/protoscribe/api/: analysis.py  guidelines.py  protocols.py  routes.py
src/protoscribe/core/: config.py
src/protoscribe/models/: database.py  protocol.py
src/protoscribe/services/: advanced_llm_analyzer.py  compliance_checker.py  document_processor.py  llm_analyzer.py
src/protoscribe/utils/: __init__.py  text_processing.py
tests/: conftest.py  test_compliance_checker.py  test_document_processor.py
